# 20260301_modelisation_hypotheses

./: .gitignore  AGENT.md  AGENTS.md  README.md  TODO_LIST.md  pyproject.toml
config/: exemple_statique.yaml  exemple_var1.yaml
data/raw/: IPL_trimestrielles.csv  IRL_trimestrielles.csv  SOURCES.md  cpi_france_fred.csv  taux_credit_habitation.csv
notebooks/: 01_exploration_generation.ipynb
scripts/: export_parametres_bourse.py  pipeline_identification_univariee.py  test_generation_moteur.py
src/modelisation_macro/: __init__.py  cli.py  generation.py  io_yaml.py  types.py  variables.py
src/modelisation_macro/bourse/: __init__.py  generer_trajectoires_bourse.py  parametres_bourse.py
src/modelisation_macro/calibration/: __init__.py  calibrer_var1_depuis_historique.py
src/modelisation_macro/identification/: __init__.py  univariee.py
tests/: test_bourse_generation.py  test_generation.py  test_identification_univariee.py
